# merchant_statement_puller

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: __version__.py
src/cli/: app.py  i18n.py
src/core/: __init__.py  gmail_client.py  merchant_config.py  models.py
src/parsers/: __init__.py  base.py  grab.py  registry.py  robinhood.py  shopee.py
src/web/: app.py  run.py
